New bootstrap site Version 1

--- a/pages/rammandir.html
+++ b/pages/rammandir.html
@@ -1,45 +1,176 @@
-<!doctype html>
-<html>
+﻿<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta charset="utf-8">
-<title></title>
-<script src="plugins/anjaniLightbox.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-62316744-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+    <link href="../Content/bootstrap.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
+    <link href="../Content/Custom.css" rel="stylesheet" />
+    <title>Anjani Lal Mandir Trust</title>
 </head>
 <body>
+<script src="../Scripts/jquery-1.9.1.js"></script>
+<script src="../Scripts/bootstrap.min.js"></script>
 <div id="wapper">
+    <nav class="navbar navbar-default navbar-expand-lg navbar-fixed-top">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <!-- Navbar Start -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="/index.html" style="font-family: 'Noto Sans', sans-serif">श्री अंजनी लाल मंदिर धाम</a>
+                    </div>
+                    <div id="navbar" class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle navMenuItem" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h5>मंदिर<span class="caret"></span></h5></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/pages/anjanimandir.html" class="navMenuItem"><h5>श्री अंजनीलाल मंदिर</h5></a></li>
+                                    <li><a href="/pages/rammandir.html" class="navMenuItem"><h5>श्री राम मंदिर</h5></a></li>
+                                    <li><a href="/pages/shivmandir.html" class="navMenuItem"><h5>श्री व्दादशज्योतिर्लिगेश्वर महादेव मंदिर</h5></a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#" class="navMenuItem"><h5>उपलब्धिया</h5></a></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle navMenuItem" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h5>गतिविधिया<span class="caret"></span></h5></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/pages/dharmik.html" class="navMenuItem"><h5>धार्मिक</h5></a></li>
+                                    <li><a href="/pages/samajik.html" class="navMenuItem"><h5>सामजिक</h5></a></li>
+                                    <li><a href="#" class="navMenuItem"><h5>राष्ट्रीय</h5></a></li>
+                                    <li><a href="#" class="navMenuItem"><h5>शेक्षणिक</h5></a></li>
+                                </ul>
+                            </li>
+                            <li><a href="/pages/etihas.html" class="navMenuItem"><h5>इतिहास</h5></a></li>
+                            <li><a href="/pages/sadasya.html" class="navMenuItem"><h5>सदस्य गड़</h5></a></li>
+                            <li><a href="/pages/contact.html" class="navMenuItem"><h5>संपर्क सूत्र</h5></a></li>
+                        </ul>
+                    </div><!--/.nav-collapse -->
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- Navbar End -->
 
-<div id="leftimgpart">
-<h1>Jh jke eafnj</h1>
-<pre class="articleText">
-	<a href="images/rammadir.jpg" title="Jh jke eafnj" alt="" class="lightbox_trigger">
-	<img src="images/rammadir.jpg" class= "textWrapLeft" alt=""/>
-	</a>
-	Jh vatuhyky th ds eafnj ds Bhd lkeus VªLV }kjk ,d HkO; fo'kky ,oa n'kZuh; eafnj dk fuekZ.k djk;k x;k gSA ftles Hkxoku Jh jke th] ekrk tkudh] Jh y{e.k th ,oa Jh vatuhyky th ds lkFk fojkteku gSA eafnj dh vk—fr ,d HkO; jkt egy ds leku gS ftlds ckgj ,oa vUnj 'osr edjkuk laxejej yxk;k x;k gSA ftles fd xbZ lqUnj uDdk'kh] tkfy;ka]  fo'kky ijns ,oa Qkuwl eafnj dks vkd"kZd :i çnku djrs gSA Hkxoku dh çfrek,a eueksgd gSA buds n'kZuksa ls eu dks ,d vkykSfdd vkuan ,oa 'kkafr çkIr gksrh gS rFkk leLr ladVks dk gj.k ,oa euksdkeukvksa dh iwfrZ gksrh gSA
-        Jh jke eafnj Hkxoku Jh vatuhyky th ,oe~ Hkxoku Onkn'kT;ksfrfyZxs'oj egknso th ds efUnj ,oe~ lHkh vko';d Hkou fuekZ.k ds ckn Hkxoku us çsj.kk nh dh vc esjs Lokeh Hkxoku Jh jke th dk HkO; ,oe~ fo'kky efUnj dk fuekZ.k djk;k tk;sA VªLV lnL;ksa us iwoZ esa gh fu.kZ; dj j[kk Fkk fd Hkxoku Jh jke th ds efUnj ds fy;s lcls mi;qä LFkku Hkxoku Jh vatuhyky th ds efUnj Bhd lkeus gh gSA
-        <a href="images/Ram_Darbar.jpg" title="Jh jke njckj" alt="" class="lightbox_trigger">
-        <img src="images/Ram_Darbar.jpg" class= "textWrapRight" alt=""/>
-        </a>
-      ml LFkku ij dbZ o"kksZ ls ,d cgqr cM+h ,oe xgjh >hy Fkh ftles gtkjksa dh la[;k esa lk¡i] fcPNw] dsdM+s rFkk tgjhys tho tUrq jgrs FksA Hkxoku dh —ik ls VªLVh ges'kk cgqr nwj dh lksprs gq,s efUnj /kke ds fodkl dh ;kstuk cuk dj dk;Z :i esa ifjf.kr djrs gSA mlh ds vuqlkj VªfLV;ks us dbZ o"kZ iwoZ ml >hy dks feêh ls Hkjdj lery djus dk fu.kZ; dj fy;k FkkA mlh vuqlkj VªfLV;ksa us ;kstuk cukbZ dh uxj es tgka dgh Hkh u;k Hkou cukus ds fy;s iqjkuk Hkou rksMk tk jgk gks ml Hkou ds ekfyd ls ml esa ls fudyus okys eyos dks efUnj dh >hy esa Mkyus dk fuosnu fd;k ,slk djus ij ifj.kke ;g gqvk dh lcus [kq'kh [kq'kh fuosnu Lohdkj fd;k vkSj /khjs /khjs gtkjks Vªkyh eyok ml >hy es lekus yxk ftlls dqN o"kksZ es >hy lery gks xbZ ;s lc Hkxoku Jh vatuhyky th dh gh ;kstuk FkhA mUgs rks vius lkeus ges'kk n'kZu ,oe~ lsok ds fy;s Hkxou Jh jke th dks cSBkuk Fkk blfy;s /keZ lezkV Lokeh Jh pkSrU; czãpkjh th egkjkt ls Hkxoku Onkn'kT;ksfrfyZxs'oj th efUnj ds cxy esa cukus dk lq>ko fnyok;k vksj uxj okfl;ks ls bruh fo'kky >hy dks iqjok dj Hkxoku Jh jke th ds efUnj fuekZ.k ds fy;s Hkwfe lery djok nh lkFk gh tgjhys tho tUrqvks dk Hk; ges'kk ds fy;s lekIr gks x;kA
-	  
-       vc jktkf/kjkt Hkxoku~ Jh jke th ds efUnj fuekZ.k dk çLrko VªLV dh ehfVax esa g"kZ ds lkFk loZlfEefr ls ikfjr gqvk lkFk gh ;g Hkh fu.kZ; fy;k fd pkgs efUnj ds fuekZ.k es dqN yEck le; yxs ysfdu efUnj f'koky; ds lkeku gh n'kZuh; cuuk pkfg;sA blds fy;s okLrqdkj dh [kkst dj Hkksiky ds çfl) Jh flag lkgc dks vf/k—r dj efUnj dh fMtkbu uD'kk Iyku ,oe~ ,LVhesV cukus dks dgk lc dqN ns[k dj O;; dk vuqeku yxk;k djhc ,d djksM+ #i;sA bruh cM+h jkf'k ,df=r djus ds fy, VªLV us fu.kZ; fy;k fd tks Hkh nku nkrk ₹ 2111 ls vf/kd dh jkf'k nku es nsxs mudk uke laxejej dh ifêdk ij vafdr fd;s tkosxs bl ds ckn fuekZ.k dk;Z çkjEHk djsus dh rS;kfj;‚ vkSj :i js[kk cukbZ xbZA
-    <a href="images/Ram_Mandir_Lights.jpg" title="lqUnj Qkuwl" alt="" class="lightbox_trigger">
-    <img src="images/Ram_Mandir_Lights.jpg" class="textWrapLeft" alt=""/>
-    </a>   
-	;kstuk dks dk;Z :i es ifjf.kr djus ds fy;s fnukad 1 vDVkscj 2003 dks ekyok esa tkus ekus xzke dksMfd;k ds lar Lokeh jke nkl th egkjkt ds dj deyks ls Hkwfe iwtu fd;k bl dk;ZØe ds eq[; ;teku lfefr lnL; Jh —".k th lkgw FksA vkius Jh jke njckj dh çfrek, viuh vksj ls nsus dk ladYi fy;kA efUnj dk fuekZ.k dk;Z çkjEHk gksdj rhoZ xfr ls c<+us yxkA bl efUnj dk <kapk bZV lhesUV ls cudj rS;kj gks x;k FkkA ysfdu vUnj ls ifjØek ekxZ gksus ds dkj.k xHkZ x`g NksVk gks x;k FkkA ftldks cM+k djuk vlEHko FkkA Hkxoku Jh vatuh yky th ls bl leL;k dk gy fudkyus dh çkFkZuk dhA dqN gh fnuksa ckn Hkxoku dh —ik ls bLd‚u efUnj dh cqDl cspus okyh cl ftles dbZ fons'kh o Hkkjrh; Hkä Fks efUnj esa jkf= foJke gsrq vkbZA mles ,d fons'kh efUnj fuekZ.k ds fo'ks"kK Hkh FksA mUgsa efUnj fd xHkZ xzg fd leL;k crkbZ mUgksaus lHkh VªLVh;ks dks cqyk dj leL;k dk gy fudky dj ifjØek ekxZ efUnj ds ckgj ls djus dk lq>ko fn;k ftls Lohdkj dj fuekZ.k dk;Z dks iqu:çkjEHk fd;kA mlds ckn iwjk fuekZ.k dk;Z Hkxoku Jh vatuhyky th us vius gkFk es ysdj VªfLV;ks ds ek/;e ls gh iw.kZ djk;kA mlds ckn lhesUV ds dk;Z ds LFkku ij 'osr edjkuk ekcZy ls dk;Z gqvk vkSj efUnj bruk vf/kd lqUnj cuk fd tks Hkh ns[ks rks ns[krk gh jg tk;A
-jktkf/kjkt Hkxoku Jh jke th dk efUnj ,d oSHko 'kkyh jkt egy ds lkeku fn[kkbZ nsrk gSA efUnj dh nhokjks ij mPp dksfV dk 'osr edjkuk ekcZy yxk gSA efUnj ds rhuks vkSj rhu njokts gS vkSj ;s rhuks njokts xksYMu ikfy'k fd;s gq, /kkrq ds cus gSA buds lkeus cus ikspZ ds pkjks vkSj lqUnj uddk'kh okys 'osr laxejej ds LrEHk vkSj rksj.k yxs gSA efUnj ds Åij dh vkSj n'kZu djus ij ikap fo'kky lqUnj f'k[kj jkt egy :ih efUnj es pkj pk¡n yxkrs gSA efUnj ds vUnj ços'k djrs gh jkt efUnj dh 'kksHkk o ltkoV eu dks eksg ysrh gSA efUnj esa yxs insZ Qkuwl lqUnjrk dks dbZ xquk cM+k nsrs gSA efUnj dh çfrekvks dk çk.k çfr"Bk lekjksg fnukd 4 fnlEcj 2011 dks fd;k x;k bls Hkh Hkxoku Onkn'k T;ksfrfyZxs'oj egknso th fd çk.k çfr"Bk lekjksg ls Hkh fo'kky o HkO; Lrj ij euk;k x;k bl vk;kstu esa Hkh ,d yk[k ipkl gtkj ls vf/kd yksxks us egk çlknh ¼Hkkstu½ xzg.k fd;k bl fo'kky vk;kstu esa Hkh dbZ peRdkj ns[kus dks feysA efUnj esa jkt flgklu ij fojkteku Hkxoku Jh jke th] ek¡ tkudh th] Hkzkrk y{e.k th ,oa guqeku th dh lqUnj eueksgd çfrek ij utj iM+rs gh eu es ,d vykSfdd vkuUn ,oe~ 'kkafr dh vuqHkwfr gksrh gSA Hkxoku dh çfrek, fl) o pkSrU; gs tgk¡ gj euksdkeuk,sa iw.kZ gksrh gs lc ladV ,oe~ chekfj;k¡ lekIr gks tkrh gSA
-efUnj ij gksus okyh çkr% o lk;adky vkjrh esa lfEefyr gksus ij yxrk gS fd tSls lk{kkr~ v;ks/;k esa jkeyyk th dh vkjrh es [kM+s gSA
-</pre>
+    <!-- Jumbotron Start -->
+    <div class="row" style="position: relative">
+        <div class="col-xs-12">
+            <div class="jumbotron text-center" style="overflow: hidden">
+                <h5 style="font-family: 'Noto Sans', sans-serif; color: white; padding-top: 10px">जय श्री राम ।। जय श्री अंजनीलाल ।। ॐ नमः शिवाय ।।</h5>
+                <h1 style="font-family: 'Noto Sans', sans-serif; color: white">श्री अंजनीलाल मंदिर ट्रस्ट ब्यावरा, राजगढ़, मध्य प्रदेश</h1>
+                <h4 style="font-family: 'Noto Sans', sans-serif; color: white; padding-bottom: 10px">म.प्र. शासन द्वारा पंजीकृत ट्रस्ट (धर्मिक, सामाजिक, राष्ट्रीय एवं मानव हितार्थ कार्यो में अग्रणी संस्था)</h4>
+            </div>
+        </div>
+    </div>
+    <!-- Jumbotron End -->
+
+
+    <!-- Article -->
+    <div class="container">
+        <h1 class="mt-4 mb-3 whiteText">श्री राम मंदिर</h1>
+        <hr/>
+        <div class="row">
+            <div class="col-lg-8">
+                <p>
+                    <span class="firstLetter">श्री</span> अंजनीलाल जी के मंदिर के ठीक सामने ट्रस्ट द्वारा एक भव्य विशाल एवं दर्शनीय मंदिर का निर्माण कराया गया है। जिसमे भगवान श्री राम जी, माता जानकी, श्री लक्ष्मण जी एवं श्री अंजनीलाल जी के साथ विराजमान है। मंदिर की आकृति एक भव्य राज महल के समान है जिसके बाहर एवं अन्दर श्वेत मकराना संगमरमर लगाया गया है। जिसमे कि गई सुन्दर नक्काशी, जालियां, विशाल परदे एवं फानूस मंदिर को आकर्षक रूप प्रदान करते है। भगवान की प्रतिमाएं मनमोहक है।
+                     इनके दर्शनों से मन को एक आलौकिक आनंद एवं शांति प्राप्त होती है तथा समस्त संकटो का हरण एवं मनोकामनाओं की पूर्ति होती है।
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <img class="img-responsive" src="../images/rammadir.jpg" alt="">
+            </div>
+            <div class="col-xs-12">
+                <p>
+                    श्री राम मंदिर भगवान श्री अंजनीलाल जी एवम् भगवान व्दादशज्योतिर्लिगेश्वर महादेव जी के मन्दिर एवम् सभी आवश्यक भवन निर्माण के बाद भगवान ने प्रेरणा दी की अब मेरे स्वामी भगवान श्री राम जी का भव्य एवम् विशाल मन्दिर का निर्माण कराया जाये। ट्रस्ट सदस्यों ने पूर्व में ही निर्णय कर रखा था कि भगवान श्री राम जी के मन्दिर के लिये सबसे उपयुक्त स्थान भगवान श्री अंजनीलाल जी के मन्दिर ठीक सामने ही है।
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <img class="img-responsive" src="../images/Ram_Darbar.jpg" alt="">
+            </div>
+            <div class="col-lg-8">
+                <p>
+                    उस स्थान पर कई वर्षो से एक बहुत बड़ी एवम गहरी झील थी जिसमे हजारों की संख्या में साँप, बिच्छू, केकड़े तथा जहरीले जीव जन्तु रहते थे। भगवान की कृपा से ट्रस्टी हमेशा बहुत दूर की सोचते हुऐ मन्दिर धाम के विकास की योजना बना कर कार्य रूप में परिणित करते है। उसी के अनुसार ट्रस्टियो ने कई वर्ष पूर्व उस झील को मिट्टी से भरकर समतल करने का निर्णय कर लिया था।
+                    उसी अनुसार ट्रस्टियों ने योजना बनाई की नगर मे जहां कही भी नया भवन बनाने के लिये पुराना भवन तोडा जा रहा हो उस भवन के मालिक से उस में से निकलने वाले मलवे को मन्दिर की झील में डालने का निवेदन किया ऐसा करने पर परिणाम यह हुआ की सबने खुशी खुशी निवेदन स्वीकार किया और धीरे धीरे हजारो ट्राली मलवा उस
+                </p>
+            </div>
+            <div class="col-xs-12">
+                <p>
+                    झील मे समाने लगा जिससे कुछ वर्षो मे झील समतल हो गई ये सब भगवान श्री अंजनीलाल जी की ही योजना थी। उन्हे तो अपने सामने हमेशा दर्शन एवम् सेवा के लिये भगवन श्री राम जी को बैठाना था इसलिये धर्म सम्राट स्वामी श्री चैतन्य ब्रह्मचारी जी महाराज से भगवान व्दादशज्योतिर्लिगेश्वर जी मन्दिर के बगल में बनाने का सुझाव दिलवाया ओर नगर वासियो से इतनी विशाल झील को पुरवा कर भगवान श्री राम जी के मन्दिर निर्माण के लिये भूमि समतल करवा दी साथ ही जहरीले जीव जन्तुओ का भय हमेशा के लिये समाप्त हो गया।
+                </p>
+                <p>
+                    अब राजाधिराज भगवान् श्री राम जी के मन्दिर निर्माण का प्रस्ताव ट्रस्ट की मीटिंग में हर्ष के साथ सर्वसम्मिति से पारित हुआ साथ ही यह भी निर्णय लिया कि चाहे मन्दिर के निर्माण मे कुछ लम्बा समय लगे लेकिन मन्दिर शिवालय के सामान ही दर्शनीय बनना चाहिये। इसके लिये वास्तुकार की खोज कर भोपाल के प्रसिद्ध श्री सिंह साहब को अधिकृत कर मन्दिर की डिजाइन नक्शा प्लान एवम् एस्टीमेट बनाने को कहा सब कुछ देख कर व्यय का अनुमान लगाया करीब एक करोड़ रुपये। इतनी बड़ी राशि एकत्रित करने के लिए ट्रस्ट ने निर्णय लिया कि जो भी दान दाता ₹ 2111 से अधिक की राशि दान मे देगे उनका नाम संगमरमर की पट्टिका पर अंकित किये जावेगे इस के बाद निर्माण कार्य प्रारम्भ करेने की तैयारियॉ और रूप रेखा बनाई गई।
+                </p>
+            </div>
+            <div class="col-lg-8">
+                <p>
+                    योजना को कार्य रूप मे परिणित करने के लिये दिनांक 1 अक्टोबर 2003 को मालवा में जाने माने ग्राम कोडकिया के संत स्वामी राम दास जी महाराज के कर कमलो से भूमि पूजन किया इस कार्यक्रम के मुख्य यजमान समिति सदस्य श्री कृष्ण जी साहू थे। आपने श्री राम दरबार की प्रतिमाए अपनी ओर से देने का संकल्प लिया। मन्दिर का निर्माण कार्य प्रारम्भ होकर तीर्व गति से बढ़ने लगा। इस मन्दिर का ढांचा ईट सीमेन्ट से बनकर तैयार हो गया था। लेकिन अन्दर से परिक्रमा मार्ग होने के कारण गर्भ गृह छोटा हो गया था। जिसको बड़ा करना असम्भव था। भगवान श्री अंजनी लाल जी से इस समस्या का हल निकालने की प्रार्थना की। 
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <img class="img-responsive" src="../images/Ram_Mandir_Lights.jpg" alt="">
+            </div>
+            <div class="col-xs-12">
+                <p>
+                    कुछ ही दिनों बाद भगवान की कृपा से इस्कॉन मन्दिर की बुक्स बेचने वाली बस जिसमे कई विदेशी व भारतीय भक्त थे मन्दिर में रात्रि विश्राम हेतु आई। उसमे एक विदेशी मन्दिर निर्माण के विशेषज्ञ भी थे। उन्हें मन्दिर कि गर्भ ग्रह कि समस्या बताई उन्होंने सभी ट्रस्टीयो को बुला कर समस्या का हल निकाल कर परिक्रमा मार्ग मन्दिर के बाहर से करने का सुझाव दिया जिसे स्वीकार कर निर्माण कार्य को पुनरूप्रारम्भ किया। उसके बाद पूरा निर्माण कार्य भगवान श्री अंजनीलाल जी ने अपने हाथ मे लेकर ट्रस्टियो के माध्यम से ही पूर्ण कराया। उसके बाद सीमेन्ट के कार्य के स्थान पर श्वेत मकराना मार्बल से कार्य हुआ और मन्दिर इतना अधिक सुन्दर बना कि जो भी देखे तो देखता ही रह जाय।
+                    राजाधिराज भगवान श्री राम जी का मन्दिर एक वैभव शाली राज महल के सामान दिखाई देता है। मन्दिर की दीवारो पर उच्च कोटि का श्वेत मकराना मार्बल लगा है। मन्दिर के तीनो और तीन दरवाजे है और ये तीनो दरवाजे गोल्डन पालिश किये हुए धातु के बने है। इनके सामने बने पोर्च के चारो और सुन्दर नककाशी वाले श्वेत संगमरमर के स्तम्भ और तोरण लगे है। मन्दिर के ऊपर की और दर्शन करने पर पांच विशाल सुन्दर शिखर राज महल रूपी मन्दिर मे चार चाँद लगाते है। मन्दिर के अन्दर प्रवेश करते ही राज मन्दिर की शोभा व सजावट मन को मोह लेती है। मन्दिर में लगे पर्दे फानूस सुन्दरता को कई गुना बड़ा देते है। मन्दिर की प्रतिमाओ का प्राण प्रतिष्ठा समारोह दिनाक 4 दिसम्बर 2011 को किया गया इसे भी भगवान व्दादश ज्योतिर्लिगेश्वर महादेव जी कि प्राण प्रतिष्ठा समारोह से भी विशाल व भव्य स्तर पर मनाया गया इस आयोजन में भी एक लाख पचास हजार से अधिक लोगो ने महा प्रसादी (भोजन) ग्रहण किया इस विशाल आयोजन में भी कई चमत्कार देखने को मिले। मन्दिर में राज सिहासन पर विराजमान भगवान श्री राम जी, माँ जानकी जी, भ्राता लक्ष्मण जी एवं हनुमान जी की सुन्दर मनमोहक प्रतिमा पर नजर पड़ते ही मन मे एक अलौकिक आनन्द एवम् शांति की अनुभूति होती है। भगवान की प्रतिमाए सिद्ध व चैतन्य हे जहाँ हर मनोकामनाऐं पूर्ण होती हे सब संकट एवम् बीमारियाँ समाप्त हो जाती है।
+                    मन्दिर पर होने वाली प्रातः व सायंकाल आरती में सम्मिलित होने पर लगता है कि जैसे साक्षात् अयोध्या में रामलला जी की आरती मे खड़े है।
+                </p>
+            </div>
+        </div>
+        <!-- End Article -->
+    </div>
+
+    <!-- Other Articles -->
+    <div class="container-fluid" style="margin-top: 40px">
+        <div class="row">
+            <div class="col-xs-4">
+                <div class="card h-100">
+                    <a href="../pages/rammandir.html"><img class="card-img-top img-responsive" src="../images/700_Ram_Mandir.jpg" alt=""></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <p>श्री राम मंदिर</p>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top img-responsive" src="../images/Slide_04_Shiv_Mandir.jpg" alt=""></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <p>श्री महादेव मंदिर</p>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top img-responsive" src="../images/700_43.jpg" alt=""></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <p>इतिहास</p>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Other Articles -->
 </div>
+
+<!-- Footer -->
+<div class="page-header bottom">
+    <div class="row">
+        <div class="col-xs-12 text-center" style="background-color: black; color: #808080">
+            <p>
+                <h4>पता - श्री अंजनीलाल मंदिर धाम ब्यावरा, जिला - राजगढ, मध्य प्रदेश, पिन कोड : 465674, फोन नंबर : 07374-232465, ईमेल : anjanilalbiaora@gmail.com</h4>
+            </p>
+        </div>
+    </div>
 </div>
+<!-- Footer -->
 </body>
 </html>
