--- a/pages/samajik.html
+++ b/pages/samajik.html
@@ -1,42 +1,156 @@
-<!doctype html>
-<html>
+﻿<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta charset="utf-8">
-<title></title>
-<link href="../css/submain.css" rel="stylesheet" type="text/css">
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-62316744-1', 'auto');
-  ga('send', 'pageview');
-</script>
+    <link href="../Content/bootstrap.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
+    <link href="../Content/Custom.css" rel="stylesheet" />
+    <title>Anjani Lal Mandir Trust</title>
 </head>
 <body>
-<div id="subwapper">
-<div id="leftimgpart">
-<h1>lkekftd</h1>
-<pre class="articleText">
-<b>us= f'kfoj</b>
+<script src="../Scripts/jquery-1.9.1.js"></script>
+<script src="../Scripts/bootstrap.min.js"></script>
+<div id="wapper">
+    <nav class="navbar navbar-default navbar-expand-lg navbar-fixed-top">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <!-- Navbar Start -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="/index.html" style="font-family: 'Noto Sans', sans-serif">श्री अंजनी लाल मंदिर धाम</a>
+                    </div>
+                    <div id="navbar" class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle navMenuItem" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h5>मंदिर<span class="caret"></span></h5></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/pages/anjanimandir.html" class="navMenuItem"><h5>श्री अंजनीलाल मंदिर</h5></a></li>
+                                    <li><a href="/pages/rammandir.html" class="navMenuItem"><h5>श्री राम मंदिर</h5></a></li>
+                                    <li><a href="/pages/shivmandir.html" class="navMenuItem"><h5>श्री व्दादशज्योतिर्लिगेश्वर महादेव मंदिर</h5></a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#" class="navMenuItem"><h5>उपलब्धिया</h5></a></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle navMenuItem" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h5>गतिविधिया<span class="caret"></span></h5></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/pages/dharmik.html" class="navMenuItem"><h5>धार्मिक</h5></a></li>
+                                    <li><a href="/pages/samajik.html" class="navMenuItem"><h5>सामजिक</h5></a></li>
+                                    <li><a href="#" class="navMenuItem"><h5>राष्ट्रीय</h5></a></li>
+                                    <li><a href="#" class="navMenuItem"><h5>शेक्षणिक</h5></a></li>
+                                </ul>
+                            </li>
+                            <li><a href="/pages/etihas.html" class="navMenuItem"><h5>इतिहास</h5></a></li>
+                            <li><a href="/pages/sadasya.html" class="navMenuItem"><h5>सदस्य गड़</h5></a></li>
+                            <li><a href="/pages/contact.html" class="navMenuItem"><h5>संपर्क सूत्र</h5></a></li>
+                        </ul>
+                    </div><!--/.nav-collapse -->
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- Navbar End -->
 
-	lu 1978 ls 2002 rd VªLV Onkjk efUnj /kke ij çfr o"kZ fnlEcj ekg esa us= f'kfojks dk vk;kstu fd;k tkrk FkkA D;ksfd ;g le; 'khrdky dk gksus ls bu fnuksa esa vkijs'ku ij dksbZ nq"çHkko ugh gksrk FkkA bu f'kfojksa dk cgqr çpkj fd;k tkrk Fkk iqjs ftys ls djhc 2000 us= jksxh bykt ds fy;s vkrs FksA lHkh us= jksfx;ksa ds us=ksa dk ifj{k.k fd;k tkrk FkkA bues ls ftu ejhtksa ds eksfr;kfcan ds vkijs'ku gksuk gksrk FkkA mUgsa efUnj /kke ifjlj esa cus vLFkkbZ fo'kky VsUV ds fpfdRlky; esa HkrhZ dj fy;k tkrk FkkA 'ks"k lHkh dks fu:'kqYd nokbZ;ksa forfjr dj nh  tkrh FkhA çR;sd f'kfoj esa 500 ls 600 jksfx;ksa ds lQy vkijs'ku 'kkldh; xka/kh esfMdy dkyst Hkksiky fd Vhe Onkjk fd;s tkrs FksA vkijs'ku fFk;sVj Hkh efUnj ds foJke x`g esa cuk;k tkrk FkkA mu fnuksa esa vkijs'ku ds ckn djhc 6 ls 7 fnuksa rd ejhtksa dks f'kfoj esa j[kk tkrk FkkA bu fnuksa esa esfMdy LVkQ ds lkFk&lkFk efUnj VªLV ds lHkh lnL; Hkh ejhtksa fd lsok esa yxs jgrs FksA lHkh ejhtksa dks fu%'kqYd nokb;k] Hkkstu o dEcy fn;s tkrs FksA o muds lkFk vk;s lg;ksfx;ksa dks Hkkstu ,oe vkokl fd lqfo/kk nh tkrh FkhA çfr o"kZ bu f'kfojksa ds 'kqHkkjEHk o lekiu lekjksg çns'k ds vfrfof'k"V gfLr;ks ekuuh; lkaln] ea=h x.k] fo/kk;d x.k ;k mPp vf/kdkfj;ksa dh mifLFkfr esa fd;s tkrs FksA vkt Hkh mu fnuksa fd ;kns eu dks çQqfYyr dj nsrh gSA vc le; esa ifjorZu ds lkFk vk/kqfud VsDuksykth vkus ls vc tfVy vkijs'ku ds LFkku ij ysUl çR;kjksi.k gksus yxs gSA bles ejht dks ek= 6 ls 8 ?kaVs gh j[kk tkrk gS o bl çfd;k esa ejht dks d"V Hkh ugh gksrk vr: 2003 ls 2007 rd us= f'kfojks esa ysUl çR;kjksi.k djk;s tkus yxsA bues Hkh ejhtksa dks Hkkstu nokbZ;k Hkksiky rd ykus ys tkus dk O;; VªLV fd vkSj ls fd;k tkrk FkkA lu 2008 esa Jh lrxq# us= fpfdRlky; vkuUniqj ftyk xquk e-ç- dh laLFkk ls lEidZ gqvkA mUgksaus blh çdkj ds us= f'kfojksa dk vk;kstu çfr lIrkg efUnj ifjlj esa djus dk çLrko VªLV ds le{k j[kk ftls VªLV us Lohdkj fd;k D;ksfd blds Onkjk vkSj vf/kd lsok djus dk volj çkIr gks jgk FkkA rHkh ls vkt rd fujUrj çfr ekg ds fOnrh; cq/kokj dks efUnj /kke fLFkr vkjksX; Hkou esa blh laLFkk ds ek/;e ls VªLV Onkjk us= f'kfojksa dk vk;kstu fd;k tk jgk gSA bu f'kfojksa fd çfl/nh o Jh vatuhyky efUnj /kke ij yksxks ds fo'okl o vkLFkk ds dkj.k çfr lIrkg lsdM+ks ejht vkdj ykHk mBk jgs gSA
+    <!-- Jumbotron Start -->
+    <div class="row" style="position: relative">
+        <div class="col-xs-12">
+            <div class="jumbotron text-center" style="overflow: hidden">
+                <h5 style="font-family: 'Noto Sans', sans-serif; color: white; padding-top: 10px">जय श्री राम ।। जय श्री अंजनीलाल ।। ॐ नमः शिवाय ।।</h5>
+                <h1 style="font-family: 'Noto Sans', sans-serif; color: white">श्री अंजनीलाल मंदिर ट्रस्ट ब्यावरा, राजगढ़, मध्य प्रदेश</h1>
+                <h4 style="font-family: 'Noto Sans', sans-serif; color: white; padding-bottom: 10px">म.प्र. शासन द्वारा पंजीकृत ट्रस्ट (धर्मिक, सामाजिक, राष्ट्रीय एवं मानव हितार्थ कार्यो में अग्रणी संस्था)</h4>
+            </div>
+        </div>
+    </div>
+    <!-- Jumbotron End -->
 
-<b>fofHkUu jksx funku f'kfoj</b>
 
-	Jh vatuhyky efUnj VªLV efUnj /kke ij fLFkr vkjksX; Hkou esa dbZ jksx funku f'kfojksa dk vk;kstu djrk jgrk gSA mues ls çeq[k gS%
+    <!-- Article -->
+    <div class="container">
+        <h1 class="mt-4 mb-3 whiteText">सामाजिक</h1>
+        <hr/>
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="headingColor">नेत्र शिविर</h3>
+                <p>
+                    सन 1978 से 2002 तक ट्रस्ट व्दारा मन्दिर धाम पर प्रति वर्ष दिसम्बर माह में नेत्र शिविरो का आयोजन किया जाता था। क्योकि यह समय शीतकाल का होने से इन दिनों में आपरेशन पर कोई दुष्प्रभाव नही होता था। इन शिविरों का बहुत प्रचार किया जाता था पुरे जिले से करीब 2000 नेत्र रोगी इलाज के लिये आते थे। सभी नेत्र रोगियों के नेत्रों का परिक्षण किया जाता था। इनमे से जिन मरीजों के मोतियाबिंद के आपरेशन होना होता था। उन्हें मन्दिर धाम परिसर में बने अस्थाई विशाल टेन्ट के चिकित्सालय में भर्ती कर लिया जाता था। शेष सभी को निरूशुल्क दवाईयों वितरित कर दी  जाती थी। प्रत्येक शिविर में 500 से 600 रोगियों के सफल आपरेशन शासकीय गांधी मेडिकल कालेज भोपाल कि टीम व्दारा किये जाते थे। आपरेशन थियेटर भी मन्दिर के विश्राम गृह में बनाया जाता था। उन दिनों में आपरेशन के बाद करीब 6 से 7 दिनों तक मरीजों को शिविर में रखा जाता था। इन दिनों में मेडिकल स्टाफ के साथ-साथ मन्दिर ट्रस्ट के सभी सदस्य भी मरीजों कि सेवा में लगे रहते थे। सभी मरीजों को निःशुल्क दवाइया, भोजन व कम्बल दिये जाते थे। व उनके साथ आये सहयोगियों को भोजन एवम आवास कि सुविधा दी जाती थी। प्रति वर्ष इन शिविरों के शुभारम्भ व समापन समारोह प्रदेश के अतिविशिष्ट हस्तियो माननीय सांसद, मंत्री गण, विधायक गण या उच्च अधिकारियों की उपस्थिति में किये जाते थे। आज भी उन दिनों कि यादे मन को प्रफुल्लित कर देती है। अब समय में परिवर्तन के साथ आधुनिक टेक्नोलाजी आने से अब जटिल आपरेशन के स्थान पर लेन्स प्रत्यारोपण होने लगे है। इसमे मरीज को मात्र 6 से 8 घंटे ही रखा जाता है व इस प्रकिया में मरीज को कष्ट भी नही होता अतरू 2003 से 2007 तक नेत्र शिविरो में लेन्स प्रत्यारोपण कराये जाने लगे। इनमे भी मरीजों को भोजन दवाईया भोपाल तक लाने ले जाने का व्यय ट्रस्ट कि और से किया जाता था। सन 2008 में श्री सतगुरु नेत्र चिकित्सालय आनन्दपुर जिला गुना म.प्र. की संस्था से सम्पर्क हुआ। उन्होंने इसी प्रकार के नेत्र शिविरों का आयोजन प्रति सप्ताह मन्दिर परिसर में करने का प्रस्ताव ट्रस्ट के समक्ष रखा जिसे ट्रस्ट ने स्वीकार किया क्योकि इसके व्दारा और अधिक सेवा करने का अवसर प्राप्त हो रहा था। तभी से आज तक निरन्तर प्रति माह के व्दितीय बुधवार को मन्दिर धाम स्थित आरोग्य भवन में इसी संस्था के माध्यम से ट्रस्ट व्दारा नेत्र शिविरों का आयोजन किया जा रहा है। इन शिविरों कि प्रसिध्दी व श्री अंजनीलाल मन्दिर धाम पर लोगो के विश्वास व आस्था के कारण प्रति सप्ताह सेकड़ो मरीज आकर लाभ उठा रहे है।
+                </p>
+            </div>
+            <div class="col-xs-12">
+                <h3 class="headingColor">विभिन्न रोग निदान शिविर</h3>
+                <p>
+                    श्री अंजनीलाल मन्दिर ट्रस्ट मन्दिर धाम पर स्थित आरोग्य भवन में कई रोग निदान शिविरों का आयोजन करता रहता है। उनमे से प्रमुख हैः
+                    <br/>
+                    <br/>
+                    . दृबाल रोग परिक्षण
+                    <br/>
+                    . नाक, कान गला रोग परिक्षण
+                    <br/>
+                    . अस्थि रोग परिक्षण
+                    <br/>
+                    . केन्सर रोग परिक्षण
+                    <br/>
+                    . ह्रदय रोग परिक्षण शिविर आदि
+                    <br/>
+                    <br/>
+                    इन शिविरों में रोग परिक्षण हेतु देश के उच्च कोटि के डाक्टरों को आमन्त्रित किया जाता है। जिनकी परिक्षण फीस ही 200 रूपये से 500 रूपये होती है। विभिन्न जांचो का खर्चा आने जाने का व्यय व समय कि बर्बादी अलग से होती है। उन प्रसिद्ध डाक्टरों व्दारा इन शिविरों में निःशुल्क परिक्षण व जाँच कराई जाती है। गत ह्रदय रोग शिविर विश्व प्रसिद्ध एस्कार्ट हॉस्पिटल दिल्ली के माध्यम से कराया गया था। वहा के प्रसिद्ध डाक्टरों ने स्वम ब्यावरा मन्दिर धाम पर पधार कर रोगियों का निःशुल्क परिक्षण व जाँच कि थी। यह सब भगवान श्री अंजनीलाल जा भगवान श्री राम जी व भगवान व्दादश ज्योतिर्लिन्गेश्वर महादेव जी के प्रताप व आशीर्वाद का ही फल है।
+                </p>
+            </div>
+        </div>
+        <!-- End Article -->
+    </div>
 
-	Û –cky jksx ifj{k.k
-	Û ukd] dku xyk jksx ifj{k.k
-	Û vfLFk jksx ifj{k.k
-	Û dsUlj jksx ifj{k.k
-	Û ºzn; jksx ifj{k.k f'kfoj vkfn
-
-	bu f'kfojksa esa jksx ifj{k.k gsrq ns'k ds mPp dksfV ds MkDVjksa dks vkefU=r fd;k tkrk gSA ftudh ifj{k.k Qhl gh 200 :i;s ls 500 :i;s gksrh gSA fofHkUu tkapks dk [kpkZ vkus tkus dk O;; o le; fd cckZnh vyx ls gksrh gSA mu çfl) MkDVjksa Onkjk bu f'kfojksa esa fu%'kqYd ifj{k.k o tk¡p djkbZ tkrh gSA xr ºzn; jksx f'kfoj fo'o çfl) ,LdkVZ g‚fLiVy fnYyh ds ek/;e ls djk;k x;k FkkA ogk ds çfl) MkDVjksa us Loe C;kojk efUnj /kke ij i/kkj dj jksfx;ksa dk fu%'kqYd ifj{k.k o tk¡p fd FkhA ;g lc Hkxoku Jh vatuhyky tk Hkxoku Jh jke th o Hkxoku Onkn'k T;ksfrfyZUxs'oj egknso th ds çrki o vk'khokZn dk gh Qy gSA
-
-</pre>
+    <!-- Other Articles -->
+    <div class="container-fluid" style="margin-top: 40px">
+        <div class="row">
+            <div class="col-xs-4">
+                <div class="card h-100">
+                    <a href="../pages/rammandir.html"><img class="card-img-top img-responsive" src="../images/700_Ram_Mandir.jpg" alt=""></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <p>श्री राम मंदिर</p>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top img-responsive" src="../images/Slide_04_Shiv_Mandir.jpg" alt=""></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <p>श्री महादेव मंदिर</p>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top img-responsive" src="../images/700_43.jpg" alt=""></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <p>इतिहास</p>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Other Articles -->
 </div>
+
+<!-- Footer -->
+<div class="page-header bottom">
+    <div class="row">
+        <div class="col-xs-12 text-center" style="background-color: black; color: #808080">
+            <p>
+                <h4>पता - श्री अंजनीलाल मंदिर धाम ब्यावरा, जिला - राजगढ, मध्य प्रदेश, पिन कोड : 465674, फोन नंबर : 07374-232465, ईमेल : anjanilalbiaora@gmail.com</h4>
+            </p>
+        </div>
+    </div>
 </div>
+<!-- Footer -->
 </body>
 </html>
