--- a/pages/anjanimandir.html
+++ b/pages/anjanimandir.html
@@ -1,26 +1,179 @@
-<!doctype html>
-<html>
+﻿<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta charset="utf-8">
-<title>Anjani Lal Mandir Trust</title>
-<link href="../css/submain.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="plugin/jquery-2.1.3.min.js"></script>
+    <link href="../Content/bootstrap.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
+    <link href="../Content/Custom.css" rel="stylesheet" />
+    <title>Anjani Lal Mandir Trust</title>
 </head>
 <body>
-<div id="subpages">
-<h3>श्री अंजनीलाल मंदिर</h3>
-<img id="leftimg" src="../images/05.jpg" width="900" height="1342" alt=""/>
-<article id="article1">
-<span id="part1">भगवान श्री अंजनीलाल जी की प्रतिमा जंगल के मध्य एक चबूतरें पर सेकड़ों वर्षों से विराजमान थी । भगवान की प्रेरणा से करीब ४५ वर्ष पूर्व नगर के कुछ युवक वहां घूमने जाने लगें । उनके द्वारा एक छोटे से मंदिर निर्माण हेतु समिति गठित कि गयी वही समिति वर्तमान में एक ट्रस्ट के रूप में कार्यरत है । </span>
-</article>
-<br>
-<article id="article2">
-<span id="part2">उसके 
-द्वारा परिसर को विकसित कर एक दर्शनीय स्थल में परिवर्तित किया गया । जिसे आज श्री अंजनी लाल मंदिर धाम के नाम से जाना जाता है वर्तमान में भगवान श्री अंजनी लाल जी कि प्रतिमा के ऊपर उसी चबूतरे के ऊपर सन १९७० में एक छोटा सा मंदिर
-का निर्माण हुआ । सन २०१३ में उसी मंदिर के स्थान पर श्वेत मकराना संगमरमर से करीब ४ करोड रूपये की  लागत से भव्य एवं विशाल मंदिर का निर्माण होने जा रहा है । इसमें  सहयोग हेतु दान राशी आप श्री अंजनी लाल मंदिर ट्रस्ट ब्यावरा के स्टेट बैंक ऑफ़ इंडिया के खाता क्रमांक १२३४५५६ में जमा कर सकते है  या ट्रस्ट के नाम से चेक या ड्राफ्ट भी भेज सकते है ।
-</span>
-</article>
-<img id="rightimg" src="../images/04.jpg" width="1200" height="900" alt=""/>
+<script src="../Scripts/jquery-1.9.1.js"></script>
+<script src="../Scripts/bootstrap.min.js"></script>
+<div id="wapper">
+    <nav class="navbar navbar-default navbar-expand-lg navbar-fixed-top">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <!-- Navbar Start -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="/index.html" style="font-family: 'Noto Sans', sans-serif">श्री अंजनी लाल मंदिर धाम</a>
+                    </div>
+                    <div id="navbar" class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle navMenuItem" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h5>मंदिर<span class="caret"></span></h5></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/pages/anjanimandir.html" class="navMenuItem"><h5>श्री अंजनीलाल मंदिर</h5></a></li>
+                                    <li><a href="/pages/rammandir.html" class="navMenuItem"><h5>श्री राम मंदिर</h5></a></li>
+                                    <li><a href="/pages/shivmandir.html" class="navMenuItem"><h5>श्री व्दादशज्योतिर्लिगेश्वर महादेव मंदिर</h5></a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#" class="navMenuItem"><h5>उपलब्धिया</h5></a></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle navMenuItem" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h5>गतिविधिया<span class="caret"></span></h5></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/pages/dharmik.html" class="navMenuItem"><h5>धार्मिक</h5></a></li>
+                                    <li><a href="/pages/samajik.html" class="navMenuItem"><h5>सामजिक</h5></a></li>
+                                    <li><a href="#" class="navMenuItem"><h5>राष्ट्रीय</h5></a></li>
+                                    <li><a href="#" class="navMenuItem"><h5>शेक्षणिक</h5></a></li>
+                                </ul>
+                            </li>
+                            <li><a href="/pages/etihas.html" class="navMenuItem"><h5>इतिहास</h5></a></li>
+                            <li><a href="/pages/sadasya.html" class="navMenuItem"><h5>सदस्य गड़</h5></a></li>
+                            <li><a href="/pages/contact.html" class="navMenuItem"><h5>संपर्क सूत्र</h5></a></li>
+                        </ul>
+                    </div><!--/.nav-collapse -->
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- Navbar End -->
+
+    <!-- Jumbotron Start -->
+    <div class="row" style="position: relative">
+        <div class="col-xs-12">
+            <div class="jumbotron text-center" style="overflow: hidden">
+                <h5 style="font-family: 'Noto Sans', sans-serif; color: white; padding-top: 10px">जय श्री राम ।। जय श्री अंजनीलाल ।। ॐ नमः शिवाय ।।</h5>
+                <h1 style="font-family: 'Noto Sans', sans-serif; color: white">श्री अंजनीलाल मंदिर ट्रस्ट ब्यावरा, राजगढ़, मध्य प्रदेश</h1>
+                <h4 style="font-family: 'Noto Sans', sans-serif; color: white; padding-bottom: 10px">म.प्र. शासन द्वारा पंजीकृत ट्रस्ट (धर्मिक, सामाजिक, राष्ट्रीय एवं मानव हितार्थ कार्यो में अग्रणी संस्था)</h4>
+            </div>
+        </div>
+    </div>
+    <!-- Jumbotron End -->
+
+
+    <!-- Article -->
+    <div class="container">
+        <h1 class="mt-4 mb-3 whiteText">श्री अंजनीलाल मंदिर</h1>
+        <hr/>
+        <div class="row">
+            <div class="col-lg-8">
+                <p class="paraFirst">
+                    भगवान श्री अंजनीलाल जी की प्रतिमा जंगल के मध्य एक चबूतरें पर सेकड़ों वर्षों से विराजमान थी।
+                    भगवान की प्रेरणा से करीब 45 वर्ष पूर्व नगर के कुछ युवक वहां घूमने जाने लगें।
+                    भगवान श्री अंजनीलाल जी की प्रेरणा से एक दिन उनके मन में आया की भगवान की प्रतिमा पर गर्मी में धूप एवम् धूल, वर्षा ऋतू में जल की फुहारे पड़ती है तो क्यों न इस चबूतरे पर एक छोटा सा टिन शेड बना दिया जाय तभी अनुमानित व्यय का बजट बनाया गया। बजट बना मात्र ₹1500 का उन दिनों यह राशि भी बडी होती थी।
+                    क्योकि उस समय एक शिक्षक का वेतन ही करीब ₹250 के आसपास होता था। तभी उन युवकों द्वारा आपस में दान की घोषणा की गई राशि हुई करीब ₹500 शेष राशि और एकत्रित कर पाने की आशा में कार्य प्रारम्भ करने की रूप रेखा बनने लगी और भगवान श्री अंजनीलाल कि प्रेरणा से टीन शेड के स्थान पर सीमेंट का एक छोटा सा मंदिर बनवाया जावे।
+                    फल स्वरूप उन युवको ने अपने दोस्तों और परिचितों के साथ अगले दिन उसी स्थान पर एक मीटिंग रखी, उस मीटिंग में एक समिति का गठन किया गया। कुछ ही दिनों बाद मंदिर निर्माण का कार्य प्रारम्भ हो गया।
+                    जब कार्य चला तो धन की कमी महसूस होने लगी तब समिति के सदस्य, नगर में दान प्राप्त करने के लिये निकले, लेकिन पूरे नगर में भ्रमण करने के पश्चात् केवल ₹250 प्राप्त हुए तभी समिति सदस्यों ने निर्णय लिया कि अब इस तरह कभी भी दान के लिये नगर में नही निकलेगे व्यक्तिगत सम्पर्क से ही दान एकत्रित करेगे।
+                    उस दिन से आज तक वही नियम चला आ रहा हे। संयोग से कुछ माह बाद दशहरे का पर्व आया। दशहरे पर प्रतिवर्ष श्री अंजनीलाल के स्थान के
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <img class="img-responsive" src="../images/05.jpg" alt="">
+            </div>
+            <div class="col-xs-12">
+                <p>
+                    समीप ही रावण वध का स्थल है जहाँ सभी नगरवासी रावण वध के लिए दशहरे पर आते है।
+                    और रावण वध के उपरांत भगवान श्री अंजनी लाल जी के दर्शन के बाद ही घरो को लौटते थे। उन्होंने जब वहाँ मन्दिर बनते देखा तो सभी का मन प्रसन्न हो गया। और लोगो ने समिति के काउंटर पर दान देकर रसीद प्राप्त कर मंदिर निर्माण मे सहयोग प्रदान किया।
+                    तब से आज तक भगवान श्री अंजनीलाल की कृपा से धन की कमी नहीं रही। भगवान श्री अंजनीलाल स्वयं लोगो के मन में प्रेरणा देते है और वे दान देते हे। लोगो की मनोकामनाएँ पूर्ण होती हे, बड़ी बड़ी विपदाये नष्ट होती हे।
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <img class="img-responsive" src="../images/04.jpg" alt="">
+            </div>
+            <div class="col-lg-8">
+                <p>
+                    नगर मे यह किवदन्तिया पीढ़ियों से लोग कहते आ रहे हे की यह स्थान बहुत बड़े बड़े संत महात्माओ की तपोस्थली रही हे। वे यहाँ एकांत मे तपस्या, साधना, अनुष्ठान एवम् जप करते थे। एक सत्य गाथा हे कि करीब 125 वर्ष पूर्व श्री नरसिंहजी भगवान के मन्दिर के महंत स्वामी रामदास जी महाराज जब अजनार नदी मे स्नान करने गए तो उन्होंने उस पार एक सूफी सन्त को देखा सूफी सन्त ने महंत जी को चमत्कार दिखाने के लिये नदी के पानी पर साफी (एक कपडा) बिछाया और उस पर बैठ कर महंत जी की ओर आने लगे महंत रामदासजी भी पहुँचे हुए संत थे वे समझ गए की ये सूफी सन्त मुझे चमत्कार दिखाना चाहता हे उन्होंने जिस शिला (घाट का पथ्थर) पर खड़े थे उसे आदेश दिया की तु क्या देख रही हे चल उनके यह कहते ही शिला उनको लेकर
+                </p>
+            </div>
+            <div class="col-xs-12">
+                <p>
+                    नदी में तैरने लगी बीच नदी में दोनों सन्त मिले सूफी सन्त ने महाराज जी के चरण पकड़कर माफी मांगी। आज भी वह शिला अंजनीलालजी के मन्दिर के सामने अलगर जी के नाम से एक चबूतरे पर विराजमान है।
+                    नरसिंह भगवान का मन्दिर भी एक प्राचीन प्रसिद मन्दिर हे जिसमें उस समय रोजाना बहुत से साधु महात्मा जमात के रूप में ठहरते थे स्वामीजी रोज नगर में भिक्षा लेने घरो के सामने से निकलते थे लेकिन रूकते नहीं थे लोग उनकी कावड़ की घंटी सुनकर ही सामान लेकर अपने घरो के सामने खड़े रहते थे। ऐसे महान सन्तों की स्थली हे यह धाम।
+                </p>
+
+                <p>
+                    यहाँ जब भगवान श्री अंजनीलाल का मंदिर बनने के बाद पुनरू पूजा, पाठ, अभिषेक, हवन शान्ति अदि होने लगे तो प्रतिमा मे चैतन्यता जागृत हुई और साक्षात् चमत्कार होने लगे जैसे बहुत पुरानी बीमारियां, प्रेत बाधाऐं दूर होना, भक्तो के दुःख तकलीफ मुसीबत दूर हो कर सभी कि मनोकामनाए पूर्ण होने लगी। फलस्वरूप धाम पर कुछ वर्ष तक तो मेहंदी पुर बालाजी धाम के जेसे दृश्य और प्रेतबाधा से ग्रस्त रोगियों की भीड़ होने लगी। अंजनीलाल मन्दिर पर आज भी कोई पण्डे पुजारी नहीं है लोगो के सभी कष्ट मात्र प्रार्थना करने से ही दूर हो रहे है। यही भक्त धाम पर तन, मन और धन से सेवा करते है।
+                    भक्तो पर भगवान की इसी कृपा का फल है की समिति आज एक शासकीय पब्लिक ट्रस्ट का रूप ले चुकी है। दानदाताओ द्वारा दिये दान का पूर्ण ईमानदारी से सदुपयोग किया जाता हे। उसी के कारण श्री अंजनीलाल मन्दिर परिसर को विकसित कर एक दर्शनीय स्थल में परिवर्तित किया गया। जिसे आज श्री अंजनीलाल मंदिर धाम के नाम से जाना जाता है।
+                </p>
+            </div>
+            <div class="col-lg-8">
+                <p>
+                    भगवान श्री अंजनीलाल जी कि प्रतिमा जिस चबूतरे के ऊपर प्राचीन कल से थी जिस पर सन 1970 में समिति द्वारा बनाये गये छोटे से मन्दिर के स्थान पर इसे पुनः तोड़ कर सन् 2013 से करीब 4 करोड़ रुपयो की लागत से एक भव्य विशाल, भव्य एवम् दर्शनीय श्वेत मकराना मार्बल से मन्दिर बन रहा है। यह मन्दिर अन्दर से माउन्ट आबु में स्थित विश्व प्रसिद्ध दिलवाड़ा जैन मंदिर की कुछ छबि लिये होगा और वहीं बाहर से करीब-करीब सोमनाथ मन्दिर की तरह दिखाई देगा।
+                    इसमें सहयोग हेतु दान राशी आप श्री अंजनीलाल मंदिर ट्रस्ट ब्यावरा के स्टेट बैंक ऑफ इंडिया शाखा ब्यावरा के खाता क्रमांक 53017607446 जिसका IFSC Code SBIN0000030155 में जमा कर सकते है या ट्रस्ट के नाम से चेक या ड्राफ्ट भी भेज सकते है।
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <img class="img-responsive" src="../images/Naya_Mandir_HDR2.jpg" alt="">
+            </div>
+        </div>
+        <!-- End Article -->
+    </div>
+
+    <!-- Other Articles -->
+    <div class="container-fluid" style="margin-top: 40px">
+        <div class="row">
+            <div class="col-xs-4">
+                <div class="card h-100">
+                    <a href="../pages/rammandir.html"><img class="card-img-top img-responsive" src="../images/700_Ram_Mandir.jpg" alt=""></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <p>श्री राम मंदिर</p>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top img-responsive" src="../images/Slide_04_Shiv_Mandir.jpg" alt=""></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <p>श्री महादेव मंदिर</p>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top img-responsive" src="../images/700_43.jpg" alt=""></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <p>इतिहास</p>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Other Articles -->
 </div>
+
+<!-- Footer -->
+<div class="page-header bottom">
+    <div class="row">
+        <div class="col-xs-12 text-center" style="background-color: black; color: #808080">
+            <p>
+                <h4>पता - श्री अंजनीलाल मंदिर धाम ब्यावरा, जिला - राजगढ, मध्य प्रदेश, पिन कोड : 465674, फोन नंबर : 07374-232465, ईमेल : anjanilalbiaora@gmail.com</h4>
+            </p>
+        </div>
+    </div>
+</div>
+<!-- Footer -->
 </body>
 </html>
