--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 <script src="../Scripts/jquery-1.9.1.js"></script>
-<script src="../Scripts/bootstrap.js"></script>
+<script src="../Scripts/bootstrap.min.js"></script>
 <div id="wapper">
-    <!-- Navbar Start -->
     <nav class="navbar navbar-default navbar-expand-lg navbar-fixed-top">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
+                    <!-- Navbar Start -->
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                             <span class="sr-only">Toggle navigation</span>
@@ -22,30 +22,30 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="/index.html" style="font-family: 'Noto Sans', sans-serif"><h4>श्री अंजनी लाल मंदिर ट्रस्ट</h4></a>
+                        <a class="navbar-brand" href="/index.html" style="font-family: 'Noto Sans', sans-serif">श्री अंजनी लाल मंदिर धाम</a>
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle navMenuItem" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h5>मंदिर<span class="caret"></span></h5></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#" class="navMenuItem"><h5>श्री अंजनीलाल मंदिर</h5></a></li>
-                                    <li><a href="#" class="navMenuItem"><h5>श्री राम मंदिर</h5></a></li>
-                                    <li><a href="#" class="navMenuItem"><h5>श्री व्दादशज्योतिर्लिगेश्वर महादेव मंदिर</h5></a></li>
+                                    <li><a href="/pages/anjanimandir.html" class="navMenuItem"><h5>श्री अंजनीलाल मंदिर</h5></a></li>
+                                    <li><a href="/pages/rammandir.html" class="navMenuItem"><h5>श्री राम मंदिर</h5></a></li>
+                                    <li><a href="/pages/shivmandir.html" class="navMenuItem"><h5>श्री व्दादशज्योतिर्लिगेश्वर महादेव मंदिर</h5></a></li>
                                 </ul>
                             </li>
                             <li><a href="#" class="navMenuItem"><h5>उपलब्धिया</h5></a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle navMenuItem" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h5>गतिविधिया<span class="caret"></span></h5></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#" class="navMenuItem"><h5>धार्मिक</h5></a></li>
-                                    <li><a href="#" class="navMenuItem"><h5>सामजिक</h5></a></li>
+                                    <li><a href="/pages/dharmik.html" class="navMenuItem"><h5>धार्मिक</h5></a></li>
+                                    <li><a href="/pages/samajik.html" class="navMenuItem"><h5>सामजिक</h5></a></li>
                                     <li><a href="#" class="navMenuItem"><h5>राष्ट्रीय</h5></a></li>
                                     <li><a href="#" class="navMenuItem"><h5>शेक्षणिक</h5></a></li>
                                 </ul>
                             </li>
-                            <li><a href="#" class="navMenuItem"><h5>इतिहास</h5></a></li>
-                            <li><a href="#" class="navMenuItem"><h5>सदस्य गड़</h5></a></li>
+                            <li><a href="/pages/etihas.html" class="navMenuItem"><h5>इतिहास</h5></a></li>
+                            <li><a href="/pages/sadasya.html" class="navMenuItem"><h5>सदस्य गड़</h5></a></li>
                             <li><a href="/pages/contact.html" class="navMenuItem"><h5>संपर्क सूत्र</h5></a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
@@ -59,38 +59,43 @@
     <div class="container">
         <h1 style="color: white">संपर्क विवरण</h1>
               <!-- Content Row -->
-      <div class="row">
-        <!-- Map Column -->
-        <div class="col-lg-8">
-          <!-- Embedded Google Map -->
-          <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3647.4623435710205!2d76.91168168169192!3d23.90867690002963!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397b6b7fabbeff7d%3A0x234eba551dd2fef8!2sAnjani+Lal+Mandir%2C+Biaora!5e0!3m2!1sen!2s!4v1504855190973"></iframe>
+        <div class="row">
+            <!-- Map Column -->
+            <div class="col-lg-8">
+                <!-- Embedded Google Map -->
+                <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3647.4623435710205!2d76.91168168169192!3d23.90867690002963!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397b6b7fabbeff7d%3A0x234eba551dd2fef8!2sAnjani+Lal+Mandir%2C+Biaora!5e0!3m2!1sen!2s!4v1504855190973"></iframe>
+            </div>
+            <!-- Contact Details Column -->
+            <div class="col-lg-4 mb-4">
+                <div class="card" style="margin: 0">
+                    <h3 class="card-header" style="color: white">संपर्क विवरण :</h3>
+                    <div class="card-body">
+                        <h5 style="color: white">
+                            श्री अंजनीलाल मंदिर धाम
+                            <br>ब्यावरा, जिला - राजगढ, मध्य प्रदेश
+                            <br>पिन कोड : 465674
+                            <br/>
+                            <br/>
+                        </h5>
+                        <h5 style="color: white">
+                            फोन नंबर : <i style="font-size: 1.3rem">07374-232465</i>
+
+                        </h5>
+                        <h5 style="color: white">
+                            <br/>
+                            ईमेल : <a href="mailto:anjanilalbiaora@gmail.com"><i style="font-size: 1.3rem">anjanilalbiaora@gmail.com</i></a>
+                        </h5>
+                        <h5 style="color: white">
+                            <br/>
+                            दर्शन का समय : सुबह 5 बजे मंदिर खुलने के बाद रात्रि 11 बजे तक दर्शन के लिए खुला रहता है |
+                        </h5>
+                    </div>
+                </div>
+            </div>
         </div>
-        <!-- Contact Details Column -->
-        <div class="col-lg-4 mb-4">
-            <h3 style="color: white">संपर्क विवरण :</h3>
-           
-            <h5 style="color: white">
-                श्री अंजनीलाल मंदिर धाम
-                <br>ब्यावरा, जिला - राजगढ, मध्य प्रदेश
-                <br>पिन कोड : 465674
-                <br/>
-                <br/>
-            </h5>
-          <h5 style="color: white">
-              फोन नंबर : 07374-232465
-              
-          </h5>
-            <h5 style="color: white">
-                <br/>
-                ईमेल : <a href="mailto:anjanilalbiaora@gmail.com"><i style="font-size: 1.5rem">anjanilalbiaora@gmail.com</i></a>
-            </h5>
-            <h5 style="color: white">
-                <br/>
-                दर्शन का समय : सुबह 5 बजे मंदिर खुलने के बाद रात्रि 11 बजे तक दर्शन के लिए खुला रहता है |
-            </h5>
-        </div>
-      </div>
-      <!-- /.row -->
+
+        <hr/>
+        <!-- /.row -->
 
       <!-- Contact Form -->
       <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
@@ -135,8 +140,6 @@
 
     <!-- Footer -->
     <!-- JavaScript -->
-    <script src="../Scripts/bootstrap.min.js"></script>
-
     <!-- Contact form JavaScript -->
     <!-- Do not edit these files! In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
     <script src="../Scripts/contact_me.js"></script>
@@ -147,7 +150,8 @@
 <div class="page-header bottom">
     <div class="row">
         <div class="col-xs-12 text-center" style="background-color: black; color: #808080">
-            <p><h4>पता - श्री अंजनीलाल मंदिर धाम ब्यावरा, जिला - राजगढ, मध्य प्रदेश, पिन कोड 465674 फोन नंबर 07374-232465</h4>
+            <p>
+                <h4>पता - श्री अंजनीलाल मंदिर धाम ब्यावरा, जिला - राजगढ, मध्य प्रदेश, पिन कोड : 465674, फोन नंबर : 07374-232465, ईमेल : anjanilalbiaora@gmail.com</h4>
             </p>
         </div>
     </div>
