--- a/pages/shivmandir.html
+++ b/pages/shivmandir.html
@@ -34,7 +34,7 @@
                                     <li><a href="/pages/shivmandir.html" class="navMenuItem"><h5>श्री व्दादशज्योतिर्लिगेश्वर महादेव मंदिर</h5></a></li>
                                 </ul>
                             </li>
-                            <li><a href="#" class="navMenuItem"><h5>उपलब्धिया</h5></a></li>
+                            <li><a href="/pages/uplabdhiya.html" class="navMenuItem"><h5>उपलब्धिया</h5></a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle navMenuItem" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h5>गतिविधिया<span class="caret"></span></h5></a>
                                 <ul class="dropdown-menu">
